fixed layout bugs with the info and form sections

--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ a {
 .info {
     background-color: var(--main-background);
     padding: 4.5em 5em 1.8em 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .form-container {
@@ -102,6 +105,7 @@ a {
     padding:1.8em 2em;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 8px;
     margin-bottom: 0.5rem;
     box-shadow: 0px 2px 4px -1px grey;
